tinyc/test/good/fun-return-nothing.c
int v()
{
    return;
}

int main()
{
    v();
    return 0;
}
