tinyc/test/bad/ptr-diff-char-schar.c
int main()
{
    char *p1;
    signed char *p2;

    p1 - p2;
    return 0;
}
